# LivePush

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xyyy/livepusher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RtmpPush.cpp  RtmpPush.h  XYCallJava.cpp  XYCallJava.h  XYQueue.cpp  XYQueue.h  native-lib.cpp  push.cpp
app/src/main/java/com/xyyy/livepusher/: LogUtil.java
app/src/main/java/com/xyyy/livepusher/activity/: CameraPreActivity.java  ImageVideoActivity.java  LivePushActivity.java  MainActivity.java  VideoActivity.java  YuvActivity.java
app/src/main/java/com/xyyy/livepusher/camera/: XYCamaryView.java  XYCamera.java  XYCameraFboRender.java  XYCameraRender.java
app/src/main/java/com/xyyy/livepusher/egl/: EglHelper.java  XYEGLSurfaceView.java  XYShaderUtil.java
app/src/main/java/com/xyyy/livepusher/encodec/: XYBaseMediaEncoder.java  XYEncodecRender.java  XYMediaEncodec.java
app/src/main/java/com/xyyy/livepusher/imgvideo/: XYImgFboRender.java  XYImgVideoRender.java  XYImgVideoView.java
app/src/main/java/com/xyyy/livepusher/push/: AudioRecordUtil.java  PushVideo.java  XYBasePushEncoder.java  XYConnectListener.java  XYEncoderPushRender.java  XYPushEncodec.java
app/src/main/java/com/xyyy/livepusher/util/: DisplayUtil.java  LogUtil.java
app/src/main/java/com/xyyy/livepusher/yuv/: XYYuvFboRender.java  XYYuvView.java  YuvRender.java
app/src/main/res/layout/: activity_camera_preview.xml  activity_image_video.xml  activity_live_push.xml  activity_main.xml  activity_video.xml  activity_yuv.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xyyy/livepusher/: ExampleUnitTest.java
